test/bad/c_cpp/MLE(unlimited increase when runtime).cpp
#include <cstdio>
#include <cstdlib>
int main() {
	while (1) {
		int * a = (int *) malloc(1000000 * sizeof(int));
	}
	return 0;
}